# Rapidrole

./: .dockerignore  .env.docker  .env.example  Dockerfile  Makefile  QUICK_START.md  README.docker.md  README.md  alembic.ini  docker-compose.yml  init-db.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
agents/: job_analyzer.py  state.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_boolean_privacy_settings.py  004_add_user_password.py
api/: auth.py  challenges.py  community.py  intelligence.py  referrals.py  templates.py  users.py
backend/: .env.test  .gitignore  Dockerfile  Makefile  TEST_FIXES_NEEDED.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  start.sh
backend/.github/workflows/: ci.yml
backend/agents/: cover_letter_generator.py  job_analyzer.py  resume_optimizer.py  state.py  workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_business_model.py
backend/api/: applications.py  challenges.py  community.py  intelligence.py  jobs.py  referrals.py  subscriptions.py  templates.py  users.py
backend/config/: settings.py
backend/db/: database.py  models.py
backend/docs/: IMPLEMENTATION_SUMMARY.md  VALIDATION_CHECKLIST.md
backend/embeddings/: matcher.py  service.py
backend/examples/: example_usage.py  test_agents.py
backend/scripts/: test.sh
backend/tests/: conftest.py  test_agents.py  test_api.py  test_database.py  test_embeddings.py  test_integration.py
backend/utils/: error_handling.py  logging.py  metrics.py  middleware.py  tracing.py
config/: pricing.py  settings.py
db/: database.py  models.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  AUTH_IMPLEMENTATION.md  BUSINESS_MODEL.md  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT.md  DOCKER_READY.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GETTING_STARTED.md  LOCAL_TESTING_SUMMARY.md  LOGGING_GUIDE.md  MARKET_READY.md  PRODUCTION_READINESS.md  PRODUCTION_READY_SUMMARY.md  QUICK_REFERENCE.md  TESTING_SUCCESS.md
embeddings/: matcher.py
examples/: api_test_collection.json  example_usage.py
scripts/: setup.sh  verify.sh
tests/: test_agents.py  test_auth.py  test_database.py  test_integration.py
utils/: auth.py  email.py  error_handling.py  metrics.py  tracing.py
